# readless.v2

./: README.md  pyproject.toml
resources/: categories.txt  feed.json
src/cli/: __init__.py  category_commands.py  feed_cli.py  feed_commands.py
src/core/: database.py  feed_manager.py
src/gui/: all_entries_tab.py  categories_tab.py  digest_tab.py  feed_sources_tab.py  main.py
