[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readless"
version = "0.1.0"
description = "A modern RSS reader application"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.6.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "pytz>=2023.3",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]